css/custom.css
body {
    font-family: 'Lato', sans-serif;
    font-weight:400;
}
h1 {
    font-size:80px;
}
h2 {
    font-size:60px;
}
h4 {
    font-size:28px;
}
h5 {
    font-size:24px;
}
h3, h4, h5, h6 {
    font-family: 'Raleway', sans-serif;
    font-weight:400;
}
h6 {
    font-size:20px;
}
h2 {
    font-family: 'Raleway', sans-serif;
    font-weight:700;
}

#content p {
    color:#4A4A4A;
    font-size:18px;
    line-height:27px;
}
.content-wrap {
    padding-bottom:0;
    padding-top:0;
}



/** REV SLIDER WITH CANVAS **/

.revo-slider-emphasis-text {
    font-weight: 700;
    letter-spacing: -1px;
    font-family: 'Raleway', sans-serif;
    padding: 15px 20px;
}

.revo-slider-desc-text {
    font-family: 'Raleway', sans-serif;
    width: 650px;
    text-align: center;
    line-height: 1.5;
}

.tp-video-play-button { display: none !important; }

.tp-caption { white-space: nowrap; }

/** SLIDER **/

#slider {
    top:-102px;
}
.rev-slide {
    font-family:font-family: 'Raleway', sans-serif;
    color:#FFF;
}
#slide-1 h5 {
    letter-spacing:0;
    font-family: 'Raleway', sans-serif;
    font-size:24px !important;
    position:relative;
    font-weight:400;
    width:561px;
    max-width:561px;
    text-align:center;
}
#slide-1 h1 {
    font-size:80px !important;
    letter-spacing:0;
    max-width:561px;
    font-family: 'Raleway', sans-serif;

}
#slide-1 p {
    font-size:28px !important;
    font-weight:400;
    font-family:font-family: 'Raleway', sans-serif;
    position:relative;
    line-height:35px;
}
#slide-1 div.col-sm-6.tright > div:nth-child(1) {
    font-size:20px !important;
    margin-bottom:13px;
    line-height:14px;
}
.icon-angle-down {
    color:#FFF;
}
#slide-1 .tel-text {
    font-size:32px !important;
    color:#FFF;
}
.text-text a:hover {
    text-decoration:none;
}
#slide-1 .row > div:nth-child(2) {
    border-left:1px solid #FFF;
}
#slide-1 div.col-sm-6.tright > div:nth-child(2) > a {
    font-family: 'Lato', sans-serif;

}
#slide-1 .button {
    margin-top:0;
    margin-bottom:0;
}
#slide-1 .final-p {
    font-size:20px;
    font-family: 'Lato', sans-serif;

}
#slide-1 .final-p a {
    color:#FFF;
}
#slide-2 .text-1 {
    font-size:28px;
    font-family:font-family: 'Raleway', sans-serif;
    color:#FFF !important;
}
#slide-2 h2 {
    font-size:60px;
    color:#FFF !important;
    font-family:font-family: 'Raleway', sans-serif;
    font-weight:700;
}
#slide-2 .text-3 {
    font-family:font-family: 'Raleway', sans-serif;
    color:#FFF !important;
    font-size:28px;
}
#slide-2 .text-4 {
    color:#FFF !important;
    font-size:20px;
    font-family: 'Lato', sans-serif;
}
#slide-2 .text-5 {
    color:#FFF !important;
    font-size:32px;
    font-family: 'Lato', sans-serif;
}
#slide-2 .text-5 a {
    color:#FFF;
    font-family: 'Lato', sans-serif;
}

#slide-3 .text-1 {
    color:#FFF !important;
    font-size:30px;
    font-family:font-family: 'Raleway', sans-serif;
}
#slide-3 h2 {
    font-size:60px;
    color:#FFF !important;
    font-family:font-family: 'Raleway', sans-serif;
}
#slide-3 .text-3 {
    font-family:font-family: 'Raleway', sans-serif;
    color:#FFF;
    font-size:24px;
}
#slide-3 .text-4 {
    font-size:20px;
    font-family: 'Lato', sans-serif;
    color:#FFF !important;

}
#slide-3 .text-tel {
    color:#FFF !important;
    font-family: 'Lato', sans-serif;
    font-size:32px;

}
#slide-3 .button {
    padding-left:25px;
    padding-right:25px;
}

.icon-star3 {
    font-size:35px;
    color:#FFD700;
    text-shadow:none;
}

/** NAVBAR **/
.logo img {
    padding:5px 0;
}
#header.sticky-header:not(.static-sticky) #primary-menu > ul > li > a {
    padding-top:29px;
    padding-bottom:28px;
}
#header.sticky-header:not(.static-sticky) #side-panel-trigger {
    margin-top:30px !important;
    margin-bottom:30px !important;
}

#primary-menu-trigger {
    font-size:28px;
    color:#02182D;
}

.device-xxs #primary-menu-trigger {
    margin-left:-5%;
}
#primary-menu ul li > a {
    color:#FFF;
    font-size:18px;
}
.device-sm #header-wrap, .device-xs #header-wrap, .device-xxs #header-wrap {
    background:#FFF;
}


@media (max-width:1350px) {
    #primary-menu ul li > a {
        font-size:16px;
        padding-left:10px;
        padding-right:10px;
    }
    .logo img {
        padding:10px 0;
    }
}
@media (max-width:1150px) {
    #primary-menu ul li > a {
        font-size:14.5px;
        padding-left:7.5px;
        padding-right:7.5px;
    }
    .logo img {
        padding:17px 0;
    }
}
.device-sm .logo img, .device-xs .logo img, .device-xxs .logo img {
    padding:5px 0;
}

.sticky-header #primary-menu ul li > a {
    color:#02182D;
}
.device-sm #primary-menu ul li > a, .device-xs #primary-menu ul li > a, .device-xxs #primary-menu ul li > a {
    color:#02182D;
}

#side-panel-trigger {
    width:22px;
    height:22px;
    right:15px;
}




.fa-info-circle {
    font-size:22px;
    position:relative;
    color:#FFF;
}
.device-sm .fa-info-circle, .device-xs .fa-info-circle, .device-xxs .fa-info-circle {
    color:#02182D;
}
.sticky-header .fa-info-circle {
    color:#02182D;
}

.device-xxs #primary-menu-trigger {
    margin-left:-5%;
}
.device-xxs #side-panel-trigger {
    margin-right:-5%;
}

/** SIDE-PANEL **/

.side-panel-wrap > div:nth-child(1) > p:nth-child(7) {
    margin-bottom:20px;
    margin-top:-5px;
}
.widget p:not(.lead) {
    margin-bottom:0;
    font-size:18px;
    color:#4A4A4A;
    font-family: 'Raleway', sans-serif;
}
.side-panel-wrap > div:nth-child(1) > div {
    margin-bottom:15px;
}
.widget .button {
    width:100%;
    font-size:18px;
    padding-left:20px;
    padding-right:20px;
    text-align:center;
}
.widget .btn-2 {
    background:#FFF;
    color:#1385E8;
    border:2px solid #1385E8;
}
.widget .btn-2:hover {
    background:#F0F0F0 !important;
}

.widget .tel-text a {
    color:#4A4A4A;
    font-size:24px;
    font-weight:700;
    font-family: 'Lato', sans-serif;

}

.widget .tel-text {
    line-height:15px;
}
/* ... */

